--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,8 +74,7 @@
   </div><!--/row-->
 
   <footer>
-    <p>&copy; rayamabledev@gmail.com</p> 
-    <p>+233-277-225-300</p>
+    <p>&copy; Company 2019</p> 
   </footer>
 
 </div> <!-- /container -->
