--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,7 +114,24 @@
 			font-size: 30px !important;
 
 		}
-
 	}
+}
+
+.no-side-padding {
+
+	padding-left: 0;
+	padding-right: 0;
+
+}
+
+.no-left-padding {
+
+	padding-left: 0 !important;
+
+}
+
+.no-right-padding {
+
+	padding-right: 0 !important;
 
 }
