--- a/app/views/projects/_list.html.erb
+++ b/app/views/projects/_list.html.erb
@@ -2,6 +2,7 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
+<% if @projects.size > 0 %>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -34,5 +35,11 @@
   </tbody>
 </table>
 
+<% else %>
+<p class="lead">You don't have any projects</p>
+<% end %>
+
+<% if (@tenant.can_create_projects?) %>
 <%= link_to 'New Project', new_tenant_project_path(tenant_id: @tenant.id),
 :class => 'btn btn-primary' %>
+<% end %>
