--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,22 +65,23 @@
 }
 
 .jumbotron {
-	background-image: asset-url('meeting1.jpg');
+	background-image: asset-url('meeting5.jpg');
+	text-align: center;
 	background-size: cover;
 	color: #fff;
 	font-family: 'Helvetica Neue' !important;
 	font-stretch: expanded;
-	padding-top: 95px;
-	padding-bottom: 95px;
+	padding-top: 100px;
+	padding-bottom: 100px;
 	margin-left: 15px;
 	margin-right: 15px;
 	text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
 
 	h2 {
-		font-size: 35px !important;
+		font-size: 60px !important;
 		.lead {
 			font-family: 'Helvetica Neue' !important;
-			font-size: 30px !important;
+			font-size: 55px !important;
 		}
 	}
 }
