add some styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,7 +29,7 @@
 	}
 
 	.navbar-link:focus, .navbar-link:hover {
-		background: #3071a9;
+		background: #000;
 		color: #fff;
 	}
 
@@ -78,7 +78,7 @@
 	text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
 
 	h2 {
-		font-size: 45px !important;
+		font-size: 35px !important;
 		.lead {
 			font-family: 'Helvetica Neue' !important;
 			font-size: 30px !important;
@@ -142,7 +142,7 @@
 }
 
 .navbar.navbar-static-top {
-	background: #000;
+	background: #17202A;
 	color: #fff !important;
 	padding-bottom: 5px;
 }
