--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
     </div><!--/row-->
 
     <footer>
-      <p>&copy; Company 2019</p> 
+      <p>&copy; Ray 2019</p> 
     </footer>
 
   </div> <!-- /container -->
